Disable model registry in configuration and enhance error handling in model registration and distillation processes. Added checks for NaN/Inf values, improved logging for model registration errors, and ensured robust DataFrame creation in the Distiller class.

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -25,7 +25,7 @@ logging:
 
 # Model Registry configuration  
 registry:
-  enabled: true  # Enable model registry
+  enabled: false# Enable model registry
   dir: ${hydra:runtime.cwd}/model_registry  # Path to the registry directory
   model_id: null  # Auto-generate model ID
   description: null  # Auto-generate description
