Refactor output directory structure in configuration and scripts. Updated paths for model artifacts and evaluation reports to ensure organized storage. Enhanced directory creation in training, distillation, and evaluation scripts for improved robustness. Improved error handling for missing files and added logging for better traceability.

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -7,16 +7,16 @@ defaults:
   - _self_
 
 # Output directory for logs and artifacts
-output_dir: ${hydra:runtime.cwd}/outputs/${now:%Y-%m-%d_%H-%M-%S}
+output_dir: ${hydra:runtime.cwd}/outputs
 
 # Paths to save models and artifacts
 paths:
-  checkpoints: ${output_dir}/checkpoints
+  checkpoints: ${output_dir}/teacher/checkpoints
   teacher_model: ${paths.checkpoints}/teacher.ckpt
-  student_model: ${output_dir}/artifacts/student.pkl
-  tokenizer: ${output_dir}/artifacts/tokenizer
-  vectorizer: ${output_dir}/artifacts/vectorizer.pkl
-  distill_data: ${output_dir}/artifacts/distill_train.parquet
+  student_model: ${output_dir}/student/artifacts/student.pkl
+  tokenizer: ${output_dir}/student/artifacts/tokenizer
+  vectorizer: ${output_dir}/student/artifacts/vectorizer.pkl
+  distill_data: ${output_dir}/student/artifacts/distill_train.parquet
   evaluation_report: ${output_dir}/evaluation_report.json
 
 # Logging
