Update training configuration in data.yaml and teacher.yaml. Increased training samples from 5000 to 10000 in data.yaml. Adjusted learning rate to 1e-5, weight decay to 0.1, and added new parameters including warmup_steps, dropout, max_seq_length, batch_size, and gradient_accumulation_steps in teacher.yaml for improved model training.

--- a/configs/model/teacher.yaml
+++ b/configs/model/teacher.yaml
@@ -1,8 +1,12 @@
 teacher:
   name: "bert-base-uncased"
   num_labels: 2
-  lr: 2e-5
-  weight_decay: 0.01
+  lr: 1e-5
+  weight_decay: 0.1
   adam_epsilon: 1e-8
-  warmup_steps: 0
-  max_grad_norm: 1.0 
+  warmup_steps: 500
+  max_grad_norm: 1.0
+  dropout: 0.2
+  max_seq_length: 128
+  batch_size: 16
+  gradient_accumulation_steps: 4 
