--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -4,20 +4,11 @@ defaults:
   - model/student
   - distill
   - train
+  - paths
   - _self_
 
 # Output directory for logs and artifacts
 output_dir: ${hydra:runtime.cwd}/outputs
-
-# Paths to save models and artifacts
-paths:
-  checkpoints: ${output_dir}/teacher/checkpoints
-  teacher_model: ${paths.checkpoints}/teacher.ckpt
-  student_model: ${output_dir}/student/artifacts/student.pkl
-  tokenizer: ${output_dir}/student/artifacts/tokenizer
-  vectorizer: ${output_dir}/student/artifacts/vectorizer.pkl
-  distill_data: ${output_dir}/student/artifacts/distill_train.parquet
-  evaluation_report: ${output_dir}/evaluation_report.json
 
 # Logging
 logging:
