--- a/configs/model/student.yaml
+++ b/configs/model/student.yaml
@@ -14,6 +14,7 @@ student:
   # Random Forest specific parameters
   random_forest_params:
     n_estimators: 100
+    criterion: "gini"  # Added criterion parameter for Random Forest
   
   # Linear models (Logistic Regression/Ridge) specific parameters
   linear_params:
